--- a/bin1.ipynb
+++ b/bin1.ipynb
@@ -3,19 +3,6 @@
     {
       "cell_type": "code",
       "execution_count": 1,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Name: Ansfred D'Souza\n",
-        "# Class: TY B Comp\n",
-        "# Roll Number: 322002\n",
-        "# PR NUmber: 22010961\n",
-        "# Assignment - 1: Data Cleaning"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1613,7 +1600,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
