--- a/bin2.ipynb
+++ b/bin2.ipynb
@@ -2,19 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Name: Ansfred D'Souza\n",
-    "# Class: TY B Comp\n",
-    "# Roll Number: 322002\n",
-    "# PR Number: 22010961\n",
-    "# Assignment - 2: Data Visualization"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -2224,7 +2211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
